fixed pfolio card alignment

--- a/src/App.css
+++ b/src/App.css
@@ -22,21 +22,21 @@ html, body {
 }
 
 .pfolio {
+ 	margin: 0 auto;
   	background: #ccc;
 	height: 100%;
 	justify-content: center;
-	margin: 0 auto;
 	display: flex;
-	padding: 20px;
 }
 
 .pfolioContent {
-	width: 1000px;
-	margin: 0 auto;
+	justify-content: center;
+	width: 1200px;
 	text-align: center;
 	display: flex;
 	flex-flow: row wrap;
 	align-content: flex-start;
+	padding: 10px;
 }
 
 .meme{
@@ -58,13 +58,15 @@ h3{
 	font-weight: bold;
 }
 
+div.card.sq{
+	margin: 0 auto;
+	margin: 10px;
+}
+
 .sq{
 	width: 500px;
 	height: 250px;
-	margin: 0 auto;
 	background-color: #bee;
-	margin-top: 10px;
-	margin-bottom: 10px;
 	position: relative;
 }
 
